# k8s-guideline-bench

./: .dockerignore  .envrc  .gitignore  LICENSE  README.md  docker-compose.local-llm.yml  flake.nix  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/constraint-extraction/api-conventions/human/: atomic_constraint_review_sheet.csv
artifacts/constraint-extraction/api-conventions/llm/: constraint_drafts.json  constraint_interpretations.json  kube_api_linter_hints.json  sentence_context_selection.json
artifacts/constraint-extraction/api-conventions/mechanical/: normative_sentence_selection.json  normative_sentence_selection_audit.json
config/: dataset_spec.json  experiment_spec.json  experiment_spec_docker_agentic.example.json  experiment_spec_full.json  experiment_spec_local_100.json  experiment_spec_pilot.json  experiment_spec_pilot_smoke.json  source_selection.json
constraints/: api_conventions_atomic_constraints_73.json
docker/: Dockerfile  Dockerfile.local_llm_proxy  Dockerfile.mini_swe_agent  run_mini_swe_agent.sh
docs/: local-agent-ops.md
docs/adr/: 0001-record-architecture-decisions.md  0002-pin-gold-scope-judge-model.md
docs/archive/api-conventions/: atomic_constraints_report.md  normative_review_notes.md
docs/human/api-conventions/: shigyos_atomic_constraints.csv
docs/llm/api-conventions/: atomic_constraints_revision_notes.md  atomic_selection_guide.md  kube_api_linter_rules.csv  kube_api_linter_summary.md  normative_constraints.json  normative_interpretations.json
docs/mechanical/api-conventions/: keyword_normative_rules.json  kube_api_linter_rules.csv  kube_api_linter_summary.md  sentence_selection_audit.json  sentence_selection_tasks.json
scripts/: inspect_agent_run.py  smoke_local_agent.sh
src/: diff_hunk_classification.py  local_llm_proxy.py  run_benchmark.py
src/agent_execution/: agent_runner.py  anthropic_client.py  claude_cli_client.py  client_spec.py  completion_client.py  completion_client_factory.py  openai_compatible_client.py  pr_body.py  run_agent.py
src/common/: base.py  error.py  git_repository.py  project_paths.py
src/constraint_extraction/: atomic_constraint.py  kube_api_linter_relation.py  main.py  normative_audit.py  normative_constraint.py  sentence_constraint_candidate.py  sentence_context_selection.py  sentence_interpretation.py  source_selection.py  source_selection_config.py
src/dataset_construction/: build_dataset.py  dataset_builder.py  dataset_spec.py  dataset_store.py  pr_collection.py  verification.py
src/llm_judgment/: compute_fair_report.py  experiment.py  fair_summary.py  gold_scope.py  judge.py  run_experiment.py  run_gold_scope.py  run_judgment.py
tests/: test_agent_runner.py  test_anthropic_client.py  test_atomic_constraint.py  test_build_dataset_cli.py  test_claude_cli_client.py  test_client_spec.py  test_completion_client_factory.py  test_compute_fair_report_cli.py  test_dataset_builder.py  test_dataset_store.py  test_diff_hunk_classification.py  test_docker_agent_images.py  test_experiment.py  test_fair_summary.py  test_git_repository.py  test_gold_scope.py  test_inspect_agent_run.py  test_judge.py  test_kube_api_linter_relation.py  test_local_agent_ops.py  test_local_llm_proxy.py  test_main.py  test_normative_audit.py  test_normative_constraint.py  test_openai_compatible_client.py  test_pr_body.py  test_pr_collection.py  test_project_paths.py  test_review_sheet.py  test_run_benchmark_cli.py  test_run_experiment_cli.py  test_run_gold_scope_cli.py  test_sentence_constraint_candidate.py  test_sentence_context_selection.py  test_sentence_interpretation.py  test_source_selection.py  test_source_selection_config.py  test_verification.py
