[project]
name = "k8s-guideline-bench"
version = "0.1.0"
description = "Benchmark pipeline for evaluating AI agent compliance with Kubernetes coding guidelines."
readme = "README.md"
requires-python = "== 3.14.*"
dependencies = [
  "anthropic==0.96.0",
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "tqdm==4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "src/common",
  "src/constraint_extraction",
  "src/dataset_construction",
  "src/agent_execution",
  "src/llm_judgment",
]
testpaths = ["tests"]

[tool.deptry]
ignore_notebooks = true
known_first_party = [
  "agent_runner",
  "anthropic_client",
  "atomic_constraint",
  "base",
  "build_dataset",
  "claude_cli_client",
  "client_spec",
  "completion_client",
  "completion_client_factory",
  "compute_fair_report",
  "dataset_builder",
  "dataset_spec",
  "dataset_store",
  "diff_hunk_classification",
  "error",
  "experiment",
  "fair_summary",
  "git_repository",
  "gold_scope",
  "judge",
  "local_llm_proxy",
  "main",
  "normative_audit",
  "normative_constraint",
  "openai_compatible_client",
  "pr_body",
  "pr_collection",
  "project_paths",
  "run_experiment",
  "run_benchmark",
  "run_gold_scope",
  "sentence_constraint_candidate",
  "sentence_context_selection",
  "sentence_interpretation",
  "verification",
]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 100
sort_by_size = true
exclude = [".venv", "build", "dist"]

[tool.uv]
managed = true
default-groups = ["lint", "typecheck", "test"]
exclude-newer = "1 week"

[dependency-groups]
lint = [
  "ruff==0.15.11",
]
typecheck = [
  "ty==0.0.31",
]
test = [
  "pytest==9.0.3",
  "pytest-mock==3.15.1",
  "pytest-cov==7.1.0",
]
audit = [
  "deptry==0.25.1",
  "vulture==2.16",
]

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]
line-length = 119

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "AIR",
  "FAST",
  "YTT",
  "ANN",
  "ASYNC",
  "B",
  "A",
  "C4",
  "CPY",
  "DTZ",
  "T10",
  "DJ",
  "FIX",
  "FA",
  "INT",
  "LOG",
  "G",
  "PIE",
  "PYI",
  "Q",
  "SLOT",
  "TID",
  "TD",
  "ARG",
  "PTH",
  "FLY",
  "I",
  "NPY",
  "PD",
  "PERF",
  "E",
  "W",
  "DOC",
  "F",
  "PGH",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "UP",
  "FURB",
  "RUF",
  "INP",
]
ignore = [
  "G004",
  "PLC1901",
  "PLR2004",
  "ANN401",
  "ARG002",
  "INP001",
  "PGH004",
  "B008",
  "A002",
  "A003",
  "PLR0913",
  "W191",
  "E111",
  "E114",
  "E117",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
extra-paths = [
  "src",
  "src/common",
  "src/constraint_extraction",
  "src/dataset_construction",
  "src/agent_execution",
  "src/llm_judgment",
]

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ty.rules]
deprecated = "warn"

invalid-argument-type = "error"
invalid-assignment = "error"
invalid-attribute-access = "error"
invalid-method-override = "error"
invalid-parameter-default = "error"
invalid-return-type = "error"
invalid-type-arguments = "error"

missing-argument = "error"
no-matching-overload = "error"
not-subscriptable = "error"

unresolved-attribute = "error"
unresolved-import = "error"
unresolved-reference = "error"

possibly-missing-attribute = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

redundant-cast = "warn"
unknown-argument = "warn"
unused-type-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = false
